--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,5 @@ handlebars = { version = "4.3.6", features = ["dir_source"] }
 markdown = "1.0.0-alpha.7"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+url = "2.3.1"
 
